fix(carousel): add 1px padding so outlines don't get cut off

--- a/src/common/scss/utility/swiper-shidoka.scss
+++ b/src/common/scss/utility/swiper-shidoka.scss
@@ -19,6 +19,11 @@
   gap: 16px;
 }
 
+.swiper-wrapper,
+.swiper-pagination {
+  padding: 1px;
+}
+
 .swiper-full-bleed {
   margin: 0 calc(var(--kd-page-gutter) * -1);
 }
